 * units:
    - don't output hostname to terminal at startup;
    - don't output sysctl keys to terminal at startup;
    - move hostname service to multi-user.target;
 * busctl:
    - remove pager;
    - remove machine argument option;
    - remove show-machine argument option;
 * tmpfiles:
    - allow following symlinks for w lines;
    - create directories already with the right label;
 * build;
    - fix conftest.c to work on arm;
    - make sure to test for -Wflag instead of -Wno-flag;
    - properly quote m4 macro arguments in CC_CHECK_FLAGS_APPEND;
 * bugfix:
    - fix open syslog stdout socket on execute;
    - fix properly label created device nodes;
 * remove bootctl program;
 * remove git mailmap file;
 * remove .dir-locals.el file;
 * sort gitignore;

   systemd (214.6)
~~~~~~~
 * core:
    - use /dev/null as output if incorrect value is set;
    - use /dev/null as input if incorrect value is set;
    - don't use /dev/kmsg as output;
    - redirect stdout to terminal by default;
    - remove EXEC_OUTPUT_SYSLOG_AND_CONSOLE type output;
    - remove EXEC_OUTPUT_JOURNAL_AND_CONSOLE type output;
    - redirect stdout to syslog if type output is syslog or journal;
    - reset signal mask on re-exec to init;
    - conditionalize kmod setup on CAP_SYS_MODULE, not whether we run in a container;
 * units:
    - introduce new DefaultInstance= field for [Install] sections;
    - remove RefuseManualStart from units which are always around;
    - local-fs.target - don't pull in default dependencies;
    - remove systemd-bus-proxyd socket and service;
 * kdbus:
    - remove sd_bus_open_system_remote function;
 * busctl:
    - remove host argument option;
 * systemctl:
    - add preset-all command;
    - remove host argument option;
 * loginctl:
    - remove host argument option;
 * systemd-analyze:
    - remove host argument option;
 * systemd-run:
    - remove host argument option;
 * tmpfiles:
 	- add "L+" command;
 * tests:
    - add test-socket-util;