@@ -181,20 +181,10 @@
 
                         <varlistentry>
                                 <term><varname>fsck.mode=</varname></term>
-
-                                <listitem>
-                                        <para>Parameter understood by
-                                        the file system checker
-                                        services. For details, see
-                                        <citerefentry><refentrytitle>systemd-fsck@.service</refentrytitle><manvolnum>8</manvolnum></citerefentry>.</para>
-                                </listitem>
-                        </varlistentry>
-
-                        <varlistentry>
                                 <term><varname>fsck.repair=</varname></term>
 
                                 <listitem>
-                                        <para>Parameter understood by
+                                        <para>Parameters understood by
                                         the file system checker
                                         services. For details, see
                                         <citerefentry><refentrytitle>systemd-fsck@.service</refentrytitle><manvolnum>8</manvolnum></citerefentry>.</para>
