@@ -17,6 +17,8 @@ systemd System and Service Manager
  * tmpfiles:
     - allow following symlinks for w lines;
     - create directories already with the right label;
+ * man:
+    - update info for kernel-command-line;
  * build;
     - fix conftest.c to work on arm;
     - make sure to test for -Wflag instead of -Wno-flag;
